# buck-ai-guide-cse

./: .env.example  .gitignore  README.md  pyproject.toml
buck-ai-guide-cse-faculties/: __init__.py  streamlit_app.py
notebooks/: data.py  pinecone.ipynb
src/: streamlit_app.py
