[project]
name = "buck_ai-guide_cse"
version = "0.1.0"
description = "Streamit RAG undergrad AI advisor for OSU CSE program utilizing LangChain, Openai, and Pinecone."
authors = [
    { name = "Keming He", email = "keminghe.career@gmail.com" },
    { name = "Noah Olsen", email = "noah24olsen+hackohio@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
keywords = ["rag", "chatbot", "streamlit"]
classifiers = [
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "streamlit (>=1.42.0,<2.0.0)",
  "python-dotenv (>=1.0.1,<2.0.0)",
  "langchain (>=0.3.18,<0.4.0)",
  "langchain-openai (>=0.3.4,<0.4.0)",
  "langchain-pinecone (>=0.2.2,<0.3.0)",
  "pinecone (>=5.4.2,<6.0.0)"
]

[project.urls]
homepage = "https://buck-ai-guide-cse.streamlit.app"
repository = "https://github.com/KemingHe/buck-ai-guide-cse"
documentation = "https://github.com/KemingHe/buck-ai-guide-cse/blob/main/README.md"
"Bug Tracker" = "https://github.com/KemingHe/buck-ai-guide-cse/issues"

[tool.poetry]
package-mode = false
requires-poetry = ">2.0"

[tool.poetry.group.dev.dependencies]
watchdog = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
